--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
 <body class="blank" style="background-color: #474D5B">
     <div id="root"></div>
     <!-- Wrapper-->
+    
+<script charset="utf-8"
+        src="https://cdn.ethers.io/scripts/ethers-v4.min.js"
+        type="text/javascript">
+</script>
 </body>
 
 </html>
